Fix double border on orbit > orbit

--- a/src/layouts/_radial-grid.scss
+++ b/src/layouts/_radial-grid.scss
@@ -72,6 +72,7 @@
     }
 
     --o-z-index: #{$z-index};
+    border: none;
     
   }
 }
